2007-04-27  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Doing the 1.0.0 release.

	* src/de/intevation/printlayout/PrintLayoutPlugin.java: Version to 1.0.0.
	* Changes.txt: Summarized changes for 1.0.0.

2007-04-27  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* README.txt: Replaced specific text on libs by a reference
	to INSTALL.txt.

	* INSTALL.txt: Added hints on OpenJUMP 1.2 and changed
	URLs of some jar files.

2007-04-27  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* lib/batik-all.jar, lib/xml-apis-ext.jar, lib/xml-apis.jar:
	removed. jar-files in openjump are now new enough.

2007-04-27  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* HowTo-Release.txt: Small fixes.

2007-04-27  Sascha L. Teichmann <sascha.teichmann@intevation.de>

	Some typo fixes in help for options dialog

	* src/de/intevation/printlayout/i18n/messages.properties,
		src/de/intevation/printlayout/i18n/messages_de.properties:
		Rand -> Druckrand, Border -> Printout border

	* src/de/intevation/printlayout/resources/options_help.html,
		src/de/intevation/printlayout/resources/options_help_de.html:
		Fix typos.

2007-04-27  Ludwig Reiter  <ludwig.reiter@intevation.de>

	Description of the print border view options.

	* src/de/intevation/printlayout/i18n/messages.properties,
	  src/de/intevation/printlayout/i18n/messages_de.properties:
	  	Added "[cm]" to the border options.

	* src/de/intevation/printlayout/resources/options_help.html,
	  src/de/intevation/printlayout/resources/options_help_de.html:
	  	Add a short description of the print border view
		options.

2007-04-24  Ludwig Reiter  <ludwig.reiter@intevation.de>

	print border view. (part 2)
	Now it is possible to configure some lines which represent
	the print border of the used printer. If a negative
	border is choosen, then this line is not shown.

	* src/de/intevation/printlayout/DocumentManager.java:
		The imageable area of the paper is not changed, so there